--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -7,7 +7,8 @@
     </li>
 </ul>
 
-<div *ngIf='selectedHero'>
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
+<!-- <div *ngIf='selectedHero'>
 
     <h2>{{selectedHero.name | uppercase}} Details</h2>
     <div><span>id: </span>{{selectedHero.id}}</div>
@@ -16,4 +17,4 @@
         <input id="hero-name" [(ngModel)] = "selectedHero.name" placeholder="name">
     </div>
     
-</div>
+</div> -->
